<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3">

                    <RelativeLayout
                        android:id="@+id/rlPiImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ivCamera"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:text="Upload Photo"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/ivCamera"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/cameraa" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="5">

                        <EditText
                            android:id="@+id/edtFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edt_rounded"
                            android:hint="@string/firstname"
                            android:paddingBottom="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="5dp"
                            android:paddingTop="10dp"
                            android:singleLine="true" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="5">

                        <EditText
                            android:id="@+id/edtLastName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edt_rounded"
                            android:hint="@string/lastname"
                            android:paddingBottom="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="5dp"
                            android:paddingTop="10dp"
                            android:singleLine="true" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="5">

                        <EditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edt_rounded"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:padding="10dp"
                            android:singleLine="true" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="5">

                        <EditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edt_rounded"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            android:singleLine="true" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="5">

                        <EditText
                            android:id="@+id/edtConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edt_rounded"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            android:singleLine="true" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="5">

                        <EditText
                            android:id="@+id/edtPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edt_rounded"
                            android:hint="@string/phone_number"
                            android:inputType="number"
                            android:padding="10dp"
                            android:singleLine="true" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="4"
                        android:padding="10dp">

                        <Button
                            android:id="@+id/btnRegister"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/btn_rounded_login"
                            android:text="@string/register"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

  <!--  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <Button
            android:id="@+id/btnHome"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_home_unselected"
            android:text="Home" />

        <Button
            android:id="@+id/btnShare"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_share"
            android:text="Share" />

        <Button
            android:id="@+id/btnSetting"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_setting_unselected"
            android:text="Setting" />

        <Button
            android:id="@+id/btnLogout"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_logout_unselected"
            android:text="Log Out" />

    </LinearLayout>-->
</LinearLayout>
